# cody

./: .gitignore  Cargo.toml  LICENSE  README.md  codemap.md  design.md
cody/: Cargo.toml
cody-core/: Cargo.toml
cody-core/migrations/: 001_initial.sql
cody-core/queries/go_lang/: boundaries.scm  edges.scm  symbols.scm
cody-core/queries/java/: boundaries.scm  edges.scm  symbols.scm
cody-core/queries/javascript/: boundaries.scm  edges.scm  symbols.scm
cody-core/queries/php/: boundaries.scm  edges.scm  symbols.scm
cody-core/queries/python/: boundaries.scm  edges.scm  symbols.scm
cody-core/queries/ruby/: boundaries.scm  edges.scm  symbols.scm
cody-core/queries/rust_lang/: boundaries.scm  edges.scm  symbols.scm
cody-core/queries/typescript/: boundaries.scm  edges.scm  symbols.scm
cody-core/src/: config.rs  error.rs  lib.rs
cody-core/src/codemap/: mod.rs  writer.rs
cody-core/src/db/: mod.rs  models.rs  schema.rs  store.rs
cody-core/src/embed/: client.rs  mod.rs
cody-core/src/extractor/: mod.rs  regex_boundaries.rs
cody-core/src/lsp/: client.rs  mod.rs  servers.rs
cody-core/src/patterns/: env.rs  fs.rs  grpc.rs  http.rs  kafka.rs  mod.rs  queue.rs  redis.rs  sql.rs
cody-core/src/pipeline/: entrypoints.rs  hash.rs  ingest.rs  mod.rs  parse.rs  traces.rs  walk.rs
cody-core/src/plugin/: go_lang.rs  java.rs  javascript.rs  mod.rs  php.rs  python.rs  registry.rs  ruby.rs  rust_lang.rs  typescript.rs
cody-core/src/query/: boundaries.rs  callees.rs  callers.rs  cross.rs  deps.rs  lookup.rs  medium.rs  mod.rs  path.rs  topology.rs  traces.rs
cody-core/src/search/: mod.rs  query.rs
cody-core/src/traces/: baggage.rs  formatter.rs  mod.rs  otlp.rs  span.rs  walker.rs
cody/src/: main.rs
docs/: claude-code.md
examples/: project-claude.md
examples/claude-command/: cody.md
scripts/: install-claude-code.sh
