[package]
name        = "cody-core"
version     = "0.1.0"
edition     = "2021"
description = "Core library for cody — static codebase semantic indexer"
license     = "MIT"
repository  = "https://github.com/s-benchahed/cody"

[dependencies]
tree-sitter            = "0.22"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python     = "0.21"
tree-sitter-ruby       = "0.21"
tree-sitter-rust       = "0.21"

rusqlite             = { version = "0.31", features = ["bundled"] }

rayon                = "1.10"
walkdir              = "2.5"
sha2                 = "0.10"
hex                  = "0.4"
regex                = "1.10"
once_cell            = "1.19"

serde                = { version = "1.0", features = ["derive"] }
serde_json           = "1.0"
anyhow               = "1.0"
thiserror            = "1.0"
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
chrono               = { version = "0.4", features = ["serde"] }
uuid                 = { version = "1.8", features = ["v4"] }

tokio                = { version = "1.37", features = ["full"] }
reqwest              = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
