[package]
name        = "cody"
version     = "0.1.0"
edition     = "2021"
description = "cody — static codebase semantic indexer for multi-language repos"
license     = "MIT"
repository  = "https://github.com/s-benchahed/cody"

[[bin]]
name = "cody"
path = "src/main.rs"

[dependencies]
cody-core            = { path = "../cody-core" }
clap                 = { version = "4.5", features = ["derive", "env"] }
anyhow               = "1.0"
tokio                = { version = "1.37", features = ["full"] }
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
serde_json           = "1.0"
